<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:title="@string/header_general"
        android:fragment="com.syncorp.app.rayweather.fragments.SettingsFragment" >
        <extra
            android:name="category"
            android:value="@string/category_general" />
    </header>
    <header
        android:title="@string/header_theming"
        android:fragment="com.syncorp.app.rayweather.fragments.SettingsFragment" >
        <extra
            android:name="category"
            android:value="@string/category_theming" />
    </header>
    <header
        android:title="@string/header_advanced"
        android:fragment="com.syncorp.app.rayweather.fragments.SettingsFragment" >
        <extra
            android:name="category"
            android:value="@string/category_advanced" />
    </header>
    <header
        android:title="@string/header_upgrade"
        android:fragment="com.syncorp.app.rayweather.fragments.SettingsFragment" >
        <extra
            android:name="category"
            android:value="@string/category_upgrade" />
    </header>
</preference-headers>